--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Farid Edu</title>
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- for font awesome -->
@@ -63,53 +64,47 @@
 
         <!-- slide show start  -->
 
-        <section class="my-4 mx-2">
-
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <section class="my-4">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active slide-bg">
-                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item active border rounded">
+                        <img src="images/cover/cover-1.png" class="d-block w-100 " alt="...">
                         <div
-                            class="carousel-caption d-flex d-lg-flex d-sm-flex flex-sm-column flex-column justify-content-sm-center align-items-lg-center justify-content-center align-items-center text-center d-md-block w-auto h-75">
-                            <h1 class="fs-1">Get Started Digital<br> Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable<br>
-                                content of
-                                a page when looking at its layout.</p>
-                            <button type="button" class="btn btn-primary px-4">Get Started</button>
+                            class="carousel-caption d-flex align-items-center text-center h-75 flex-column justify-content-center">
+                            <h3>Get Started Digital <br>Learning</h3>
+                            <small class="lh-1 ">It is a long established fact that a reader will be distracted by the
+                                readable content of a page .</small>
+                            <button class="btn btn-primary mt-3">Get Started</button>
                         </div>
                     </div>
-                    <div class="carousel-item ">
+                    <div class="carousel-item border rounded">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                         <div
-                            class="carousel-caption d-flex d-lg-flex d-sm-flex flex-sm-column flex-column justify-content-sm-center align-items-lg-center justify-content-center align-items-center text-center d-md-block w-auto h-75">
-                            <h1>Get Started Digital<br> Learning</h1>
-                            <p class="my-3">It is a long established fact that a reader will be distracted by the
-                                readable
-                                <br>content of
-                                a page when looking at its layout.
-                            </p>
-                            <button type="button" class="btn btn-primary px-4 my-3">Get Started</button>
+                            class="carousel-caption d-flex align-items-center text-center h-75 flex-column justify-content-center">
+                            <h3>Get Started Digital <br>Learning</h3>
+                            <small class="lh-1">It is a long established fact that a reader will be
+                                distracted by the
+                                readable content of a page .</small>
+                            <button class="btn btn-primary mt-3">Get Started</button>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item border rounded">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div
-                            class="carousel-caption d-flex d-lg-flex d-sm-flex flex-sm-column flex-column justify-content-sm-center align-items-lg-center justify-content-center align-items-center text-center d-md-block w-auto h-75">
-                            <h1>Get Started Digital<br> Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable
-                                <br>content of
-                                a page when looking at its layout.
-                            </p>
-                            <button type="button" class="btn btn-primary px-4">Get Started</button>
+                            class="carousel-caption d-flex align-items-center text-center h-75 flex-column justify-content-center">
+                            <h3>Get Started Digital <br>Learning</h3>
+                            <small class="lh-1 ">It is a long established fact that a reader will be distracted by the
+                                readable content of a page .</small>
+                            <button class="btn btn-primary mt-3">Get Started</button>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
@@ -142,13 +137,13 @@
                             <div class="row g-0">
                                 <div class="col-md-4 col-12">
                                     <img src="images/course/course-1.png"
-                                        class="img-lg-fluid img-md-fluid rounded-start " alt="...">
+                                        class="img-lg-fluid img-md-fluid rounded-start card-img" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card.
+                                        <p class="card-text">User experience (UX) designers focus on the experience that
+                                            users have while using products like websites, apps, and physical objects.
                                         </p>
                                         <h5 class="text-primary">
                                             Price: $20
@@ -165,13 +160,15 @@
                         <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start card-img"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Javascript Basic to advanced</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card.
+                                        <p class="card-text">JavaScript is the world's most popular programming
+                                            language. JavaScript is the programming language of the Web. JavaScript is
+                                            easy to learn.
                                         </p>
                                         <h5 class="text-primary">
                                             Price: $20
@@ -188,13 +185,14 @@
                         <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start card-img"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Fullstack Web Development</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card.
+                                        <p class="card-text">A full stack web developer is a person who can develop both
+                                            client and server software.In addition to mastering HTML and CSS.
                                         </p>
                                         <h5 class="text-primary">
                                             Price: $20
@@ -211,13 +209,14 @@
                         <div class="card mb-3" style="max-width:100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start card-img"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Digital Marketing</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card.
+                                        <p class="card-text">Digital marketing, also known as online marketing, refers
+                                            to advertising delivered through digital channels to promote brands.
                                         </p>
                                         <h5 class="text-primary">
                                             Price: $20
@@ -235,13 +234,15 @@
                         <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="images/course/course-5.png" class="img-fluid rounded-start card-img"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Photography Basic Rules</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card.
+                                        <p class="card-text">Photography is the art, application, and practice of
+                                            creating durable images by recording light, either electronically by means
+                                            of an image sensor,
                                         </p>
                                         <h5 class="text-primary">
                                             Price: $20
@@ -255,13 +256,15 @@
                         <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="images/course/course-6.png" class="img-fluid rounded-start card-img"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Motion Graphics</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card.
+                                        <p class="card-text">Many times, Motion Graphics is also called Motion Design,
+                                            making the relationship between movement and design elements easier to
+                                            understand.
                                         </p>
                                         <h5 class="text-primary">
                                             Price: $20
@@ -308,12 +311,12 @@
                                         <p>Online Course</p>
                                     </div>
                                     <div class="col-lg-4 col-md-5 col-6">
-                                        <h1>3.2k+</h1>
-                                        <p>Online Course</p>
+                                        <h1>600+</h1>
+                                        <p>Expert member</p>
                                     </div>
                                     <div class="col-lg-4 col-md-5 col-6">
-                                        <h1>3.2k+</h1>
-                                        <p>Online Course</p>
+                                        <h1>1k+</h1>
+                                        <p>Rating & Review</p>
                                     </div>
 
                                 </div>
